--- a/photo1.html
+++ b/photo1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="tengu.jpeg" width="500px">
-    <p>Тенгу</p>
+    <img src="tengu.jpeg" width="500px" title="Тенгу">
 </body>
 </html>
