--- a/photo2.html
+++ b/photo2.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="hitotsume.jpeg" width="500px">
-    <p>Хитотцуме</p>
+    <img src="hitotsume.jpeg" width="500px" title="Тенгу">
 </body>
 </html>
