--- a/photo2.html
+++ b/photo2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="hitotsume.jpeg" width="500px" title="Тенгу">
+    <img src="hitotsume.jpeg" width="500px" title="Хитотцуме">
 </body>
 </html>
